<resources>
    <string name="app_name">GourMate</string>
    <string name="menu_recipe_list">Recent Recipes</string>
    <string name="menu_add_recipe">Add Recipe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open"></string>
    <string name="drawer_close"></string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_view_recipe">ViewRecipeActivity</string>
    <string name="title">Title</string>
    <string name="title_hint">Ex. Creamy Fettuccine with Clam Sauce</string>
    <string name="prep_time">Prep time</string>
    <string name="cook_time">Cook time</string>
    <string name="prep_time_hint">Ex. 20 min</string>
    <string name="cook_time_hint">Ex. 1 1/2 hours</string>
    <string name="add_ingredient_button">ADD INGREDIENT</string>
    <string name="add_step_button">ADD STEP</string>
    <string name="add_image_button">ADD IMAGE</string>
    <string name="save_recipe_button">SAVE</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Units</string>
    <string name="ingredient">Ingredient</string>
    <string name="step">Step</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="add_step">Add Step</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>
