<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:id="@+id/quantity_header"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/label_horizontal_offset"
        android:layout_marginEnd="@dimen/label_horizontal_offset"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_ingredient_quantity"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/label_horizontal_offset"
        android:layout_marginEnd="@dimen/label_horizontal_offset" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit"
        android:id="@+id/units_header"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/label_horizontal_offset"
        android:layout_marginEnd="@dimen/label_horizontal_offset" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_ingredient_unit"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/label_horizontal_offset"
        android:layout_marginEnd="@dimen/label_horizontal_offset" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredient"
        android:id="@+id/ingredient_header"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/label_horizontal_offset"
        android:layout_marginEnd="@dimen/label_horizontal_offset" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_ingredient_ingredient"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/label_horizontal_offset"
        android:layout_marginEnd="@dimen/label_horizontal_offset" />
</LinearLayout>